--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <meta name="Classification" content="Restaurant" />
     <meta name="distribution" content="Global" />
     <meta name="target" content="all" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
