--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="{{ $insticonFromLaravel ?? '' }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#d1e6d5" />
-    <meta name="description" content="Corridor Talks" />
+    <meta name="description" content="Green line" />
     <meta name="subject" content="online restaurant" />
     <meta name="copyright" content="Zia Amelia" />
     <meta name="language" content="En" />
