--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <script
+      src="https://unpkg.com/react@18/umd/react.development.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+      crossorigin
+    ></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
+    <meta charset="utf-8" />
     <link rel="icon" href="{{ $insticonFromLaravel ?? '' }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#d1e6d5" />
@@ -26,7 +35,6 @@
   </head>
   <body style="background-color: #f0f5f9">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
     <div id="root"></div>
   </body>
 </html>
